opam-version: "2.0"
homepage: "https://github.com/roburio/u2f"
dev-repo: "git+https://github.com/roburio/u2f.git"
bug-reports: "https://github.com/roburio/u2f/issues"
maintainer: [ "team@robur.coop" ]
authors: [ "Reynir Björnsson <reynir@reynir.dk>" "Hannes Mehnert <hannes@mehnert.org>" ]
license: "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dream" {dev}
  "ppx_blob" {dev}
  "cmdliner" {dev}
  "logs" {dev}
  "lwt" {dev}
  "yojson"
  "ppx_deriving_yojson"
  "mirage-crypto-ec"
  "x509"
  "base64"
]

synopsis: "U2F implementation in OCaml"
