opam-version: "2.0"
homepage: "https://github.com/robur-coop/u2f"
dev-repo: "git+https://github.com/robur-coop/u2f.git"
bug-reports: "https://github.com/robur-coop/u2f/issues"
doc: "https://robur-coop.github.io/u2f/doc"
maintainer: [ "team@robur.coop" ]
authors: [ "Reynir Björnsson <reynir@reynir.dk>" "Hannes Mehnert <hannes@mehnert.org>" ]
license: "BSD-2-Clause"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "dream" {dev}
  "ppx_blob" {dev}
  "cmdliner" {dev}
  "logs" {dev}
  "lwt" {dev}
  "yojson"
  "ppx_deriving_yojson"
  "mirage-crypto-ec"
  "mirage-crypto-rng"
  "x509" {>= "0.13.0"}
  "base64" {>= "3.1.0"}
  "cstruct" {>= "6.0.0"}
]

conflicts: [
  "result" {< "1.5"}
]

synopsis: "Universal Second Factor (U2F) implementation in OCaml"
description: """
A server-side implementation of the two-factor authentication standard
Universal Second Factor (U2F). With special (USB, NFC) devices, a
challenge-response authentication using public key cryptography is done.
"""
